--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 @layer components {
   .bg-home-hero {
-    @apply bg-[url('/images/home/bg-hero.jpg')] bg-cover bg-no-repeat bg-center;
+    @apply bg-[url('/images/home/bg-hero-1.jpg')] bg-cover bg-no-repeat bg-center;
   }
 }
